# TEIC

./: .gitignore  README.md  docker-build.sh  vercel.json
backend/: pyproject.toml  requirements.txt
backend/app/: graph.py  main.py  tools.py
backend/app/data/: _chat_abel_mesen.txt  _chat_francisco_salas.txt  _chat_grettel.txt  _chat_laura_monestel.txt  _chat_luisa_alfaro.txt  _chat_maria_jose_alfaro.txt  _chat_maritza_ortiz.txt  _chat_paola_mora_lopez.txt  _chat_robert_monestel.txt
backend/app/setup/: data.py  environment.py
backend/app/test/: 10_gpt_4_1_mini.json  11_gpt_4_1_mini.json  12_gpt_4_1_mini.json  13_gpt_4_1_mini.json  1_gpt_4_1_mini.json  2-gpt_4_1_mini.json  3_gpt_4_1_mini.json  4_gpt_4_1_mini.json  5_gpt_4_1_mini.json  6_gpt_4_1_mini.json  7_gpt_4_1_mini.json  8_gpt_4_1_mini.json  9_gpt_4_1_mini.json  embedding_models.py  fine_tune_embeddings.py  generate_samples.py  rag.py  test_samples-v2.json  test_samples-v3.json  test_samples.json  training_samples.json  validation_samples.json
backend/app/utils/: chains.py  chunks.py  dates.py  mocks.py  setup.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: App.jsx  Content.jsx  Controls.jsx  Header.jsx  Modal.jsx
