[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TEIC-backend"
version = "0.1.0"
description = "Backend server for TEIC"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-openai",
    "langchain-google-community",
]

[project.optional-dependencies]
dev = [
    "pytest",
] 