[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TEIC-backend"
version = "0.1.0"
description = "Backend server for TEIC"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-openai",
    "langchain-google-community",
    "langchain-huggingface>=0.2.0",
    "qdrant-client>=1.14.2",
    "langgraph>=0.4.3",
    "pandas>=2.2.3",
    "ragas>=0.2.15",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "accelerate>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
] 
